[gd_scene load_steps=10 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://StoryText.gd" type="Script" id=2]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=3]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StoryText" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 427.0
margin_right = 976.0
margin_bottom = 485.0
custom_fonts/font = SubResource( 1 )
text = "Placeholder Text "
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 489.0
margin_right = 976.0
margin_bottom = 552.0
size_flags_horizontal = 3
custom_constants/separation = 25

[node name="LineInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 881.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 906.0
margin_right = 976.0
margin_bottom = 63.0
rect_min_size = Vector2( 70, 63 )
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="okLabel" type="Label" parent="VBoxContainer/HBoxContainer/TextureButton"]
margin_right = 69.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "OK"
valign = 1

[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineInput" to="." method="_on_LineInput_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
